[project]
name = "deep-learning-with-jax-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flax>=0.12.2",
    "graphviz>=0.21",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jax>=0.8.2",
    "jaxlib>=0.8.2",
    "jupyterlab>=4.5.1",
    "numpy>=2.4.0",
    "numpyro>=0.19.0",
    "ollama>=0.6.1",
    "optax>=0.2.6",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "polars>=1.36.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "streamlit>=1.52.2",
]
